Fixed glitch with z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ input {
     margin-bottom: 30px;
     display: inline-block;
     /* float: left; */
-    opacity: 0.9;
+    opacity: 1;
     position: relative;
 }
 
@@ -220,18 +220,17 @@ input {
 
 /* Attempting to make my own carousel */
 .fading {
+    position: relative;
     z-index: 5;
-    transition: opacity 0.5s ease;
-    -webkit-transition: opacity 0.5 ease;
+    transition: opacity 0.5s ease-in-out;
+    -webkit-transition: opacity 0.5 ease-in-out;
 }
 
 .fadeEffect {
-    z-index: -1;
+    z-index: 0;
     position: absolute;
     bottom: 0px;
-    opacity: 0.5;
-    transition: opacity 0.5s ease;
-    -webkit-transition: opacity 0.5 ease;
+    opacity: 1;
 }
 
 /* Designing the banner of text along the gallery thumnbnails */
